<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="org.northcoders.recordshopapp.model.album.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addalbum.AddNewAlbumActivity">

        <!--    Title: Text Input    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_title_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_title_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_title_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. Goodbye Yellow Brick Road"
                    android:hint="Title"
                    android:inputType="text"
                    android:text="@={`` + album.title}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_title_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    TODO: Artists: Checkbox    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_artists"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_title">

            <LinearLayout
                android:id="@+id/linearLayout_album_field_artists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_artists_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_artists_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_artists_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/artistsCheckboxContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <CheckedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <CheckedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    Genres: Checkbox    -->
        <!--   TODO: Apply same solution with artists     -->

        <!--    Duration In Seconds: Number Input?    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_duration_in_seconds"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_artists">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_duration_in_seconds_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_duration_in_seconds_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_duration_in_seconds_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_duration_in_seconds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. 4000"
                    android:text="@={`` + album.durationInSeconds}"
                    android:hint="Duration in Seconds"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_duration_in_seconds_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    Image URL: Text Uri View?    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_image_url"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_duration_in_seconds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_image_url_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_image_url_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_image_url_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_image_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. https://<some-domain.com>/Elton_John_-_Goodbye_Yellow_Brick_Road.jpg"
                    android:hint="Image URL"
                    android:text="@={`` + album.imageUrl}"
                    android:inputType="textUri"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_image_url_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    Release Year: Number Input?     (Nullable)    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_release_year"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_image_url">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_release_year_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_release_year_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_release_year_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_release_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. 1973"
                    android:hint="Release Year"
                    android:text="@={`` + album.releaseYear}"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_release_year_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    Publisher: Text Input      (Nullable)    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_publisher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_release_year">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_publisher_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_publisher_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_publisher_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. DJM Records"
                    android:hint="Publisher"
                    android:text="@={`` + album.publisher}"
                    android:inputType="text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_publisher_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--    Price In Pences or Pound: Number Input?       -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_album_field_price_in_pences"
            android:layout_width="match_parent"
            android:layout_height="@dimen/album_field_card_height"
            android:layout_margin="@dimen/album_field_card_margin"
            app:cardCornerRadius="@dimen/album_field_card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_album_field_publisher">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_album_field_price_in_pences_icon"
                    android:layout_width="@dimen/album_field_icon_width"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_field_price_in_pences_icon_alt_text"
                    android:padding="@dimen/album_field_icon_padding"
                    android:src="@drawable/album_field_price_in_pences_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_album_price_in_pences"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="i.e. DJM Records"
                    android:hint="Price in Pences"
                    android:text="@={`` + album.priceInPences}"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_album_field_price_in_pences_icon"
                    app:layout_constraintTop_toTopOf="parent"

                    />

<!--                <RadioGroup-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->
<!--                    <RadioButton-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="GBP"-->
<!--                </RadioGroup>-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!--    TODO: Currency: Radio Button?       -->
        <!--    TODO: Do it inside price in pences  -->

        <!--    TODO: Format: Radio Group & Buttons?       -->


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="Add Album"
            android:text="Add Album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_album_field_price_in_pences" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="5dp"
            android:src="@drawable/return_fab_icon"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>